Review FT tutorial

--- a/documentation/source/general/tutorial/FT_compilation.ipynb
+++ b/documentation/source/general/tutorial/FT_compilation.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "93385e9a",
    "metadata": {},
    "outputs": [
@@ -76,14 +76,14 @@
    "id": "05947122",
    "metadata": {},
    "source": [
-    "We now count the amount of T-gates using the `count_ops` method and measure the T-depth using the `t_depth` method.\n",
+    "We now count the amount of T-gates using the [count_ops](../../reference/Circuit%20Manipulation/generated/qrisp.QuantumCircuit.count_ops.rst) method and measure the T-depth using the [t_depth](../../reference/Circuit%20Manipulation/generated/qrisp.QuantumCircuit.t_depth.rst) method.\n",
     "\n",
     "> **Note:** As you might have noticed, T-depth and T-count are two different things. The former is approximately proportional to the **maximum speed** the algorithm can be executed with. The latter is the amount of T-gates. Please note that as of right now it's unclear how efficient magic-state destillation will happen. Therefore, a future quantum computer, that can create magic states efficiently will be bottlenecked by the T-depth but a device where this process takes a lot of time will be bottlenecked by that T-count."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "47d49772",
    "metadata": {},
    "outputs": [
@@ -93,7 +93,7 @@
        "2"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "8fbb4b3c",
    "metadata": {},
    "outputs": [
@@ -151,13 +151,13 @@
     "\n",
     "## Improving performance\n",
     "\n",
-    "The first and foremost performance enhancement that Qrisp achieves is gate-speed aware compilation. For a detailed description please read this section [gate_speed_aware_comp](). This feature allows the Qrisp compiler to modify the order of gates and improve the allocation mechanism under the consideration that certain gates take more time than others. The result is that in a physical circuit execution, the overal run-time is significantly enhanced.\n",
+    "The first and foremost performance enhancement that Qrisp achieves is gate-speed aware compilation. For a detailed description please read the corresponding section for [compile](../../reference/Core/generated/qrisp.QuantumSession.compile.rst). This feature allows the Qrisp compiler to modify the order of gates and improve the allocation mechanism under the consideration that certain gates take more time than others. The result is that in a physical circuit execution, the overal run-time is significantly enhanced.\n",
     "To specify the gate-speed of the backend you are targeting, you can write your own gate-speed function. This function should take an Operation object and return the corresponding speed."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "6f6154ee",
    "metadata": {},
    "outputs": [],
@@ -177,12 +177,12 @@
    "id": "98940111",
    "metadata": {},
    "source": [
-    "This gate-speed function describes a rather exotic backend where the X-gate takes 1 time unit (for instance nanoseconds), the Y-gate 10 time units and every other gate is executed instantaneously. To specify the T-gate speed you can use the built-in function: `t_depth_indicator`. This function assigns $T$, $T^\\dagger$ and $P(\\pm \\frac{\\pi}{4})$ gates a speed of 1, parametrized gates (such as the above) a gate-speed of $3\\log_2(\\frac{1}{\\epsilon})$ and every clifford gate a time of 0."
+    "This gate-speed function describes a rather exotic backend where the X-gate takes 1 time unit (for instance nanoseconds), the Y-gate 10 time units and every other gate is executed instantaneously. To specify the T-gate speed you can use the built-in function: [t_depth_indicator](../../reference/generated/qrisp.t_depth_indicator.rst). This function assigns $T$, $T^\\dagger$ and $P(\\pm \\frac{\\pi}{4})$ gates a speed of 1, parametrized gates (such as the above) a gate-speed of $3\\log_2(\\frac{1}{\\epsilon})$ and every clifford gate a time of 0."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "26dc6ca9",
    "metadata": {},
    "outputs": [],
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "ca9d695b",
    "metadata": {},
    "outputs": [
@@ -238,12 +238,12 @@
     "\n",
     "## Fault-Tolerant Toffolis\n",
     "\n",
-    "Another important important leverage Qrisp offers for fault-tolerant compilation is the use of specialized `mcx` implementations. The most relevant methods here are `jones` and `gidney`. The default Toffoli implementation (requiring no ancillae) requires a T-depth of 4."
+    "Another important important leverage Qrisp offers for fault-tolerant compilation is the use of specialized [mcx](../../reference/Primitives/generated/qrisp.mcx.rst) implementations. The most relevant methods here are `jones` and `gidney`. The default Toffoli implementation (requiring no ancillae) requires a T-depth of 4."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "76a4eee5",
    "metadata": {},
    "outputs": [
@@ -253,7 +253,7 @@
        "4"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "a29c9cab",
    "metadata": {},
    "outputs": [
@@ -286,7 +286,7 @@
        "1"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "23f66bf5",
    "metadata": {},
    "outputs": [
@@ -323,7 +323,7 @@
        "(<QuantumVariable 'ctrl'>, Qubit(target.0))"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,12 +339,12 @@
    "id": "bb959c5e",
    "metadata": {},
    "source": [
-    "To call the uncomputation part, you can use the `uncompute` method or call it within an `InversionEnvironment`."
+    "To call the uncomputation part, you can use the [uncompute](../../reference/Core/generated/qrisp.QuantumVariable.uncompute.rst) method or call it within an [InversionEnvironment](../../reference/Quantum%20Environments/InversionEnvironment.rst)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "37d8a84c",
    "metadata": {},
    "outputs": [],
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "61805eb3",
    "metadata": {},
    "outputs": [
@@ -409,22 +409,22 @@
     "\n",
     "The Qrisp implementation of Shor's algorithm allows you to provide an arbitrary adder for the execution of the required arithmetic. We provide some pre-implemented adders notably:\n",
     "\n",
-    "* The `fourier_adder` ([paper](https://arxiv.org/abs/quant-ph/0008033)) requires minimal qubit overhead and has a very efficient `custom_control` but uses a lot of parametized phase gates, which increases the T-depth. The low qubit count makes it suitable for simulation, which is why it is the default adder.\n",
+    "* The [fourier_adder](../../reference/Primitives/generated/qrisp.fourier_adder.rst) ([paper](https://arxiv.org/abs/quant-ph/0008033)) requires minimal qubit overhead and has a very efficient [custom_control](../../reference/generated/qrisp.custom_control.rst) but uses a lot of parametized phase gates, which increases the T-depth. The low qubit count makes it suitable for simulation, which is why it is the default adder.\n",
     "\n",
-    "* The `cucarro_adder` ([paper](https://arxiv.org/abs/quant-ph/0410184)) also requires minimal qubits but no parametrized phase gates. It doesn't have a custom controlled version.\n",
+    "* The [cucarro_adder](../../reference/Primitives/generated/qrisp.cuccaro_adder.rst) ([paper](https://arxiv.org/abs/quant-ph/0410184)) also requires minimal qubits but no parametrized phase gates. It doesn't have a custom controlled version.\n",
     "\n",
-    "* The `gidney_adder` ([paper](https://arxiv.org/abs/1709.06648)) requires $n$ ancillae but uses the `gidney` Toffoli method described above, making it very fast in terms of T-depth but also economical in terms of T-count.\n",
+    "* The [gidney_adder](../../reference/Primitives/generated/qrisp.gidney_adder.rst) ([paper](https://arxiv.org/abs/1709.06648)) requires $n$ ancillae but uses the `gidney` Toffoli method described above, making it very fast in terms of T-depth but also economical in terms of T-count.\n",
     "\n",
-    "* The `qcla` ([paper](https://arxiv.org/abs/2304.02921)) requires quite a lot of ancillae but has only logarithmic scaling when it comes to T-depth. It is faster than the Gidney adder for any input size larger than 7.\n",
+    "* The [qcla](../../reference/Primitives/generated/qrisp.qcla.rst) ([paper](https://arxiv.org/abs/2304.02921)) requires quite a lot of ancillae but has only logarithmic scaling when it comes to T-depth. It is faster than the Gidney adder for any input size larger than 7.\n",
     "\n",
-    "In general you can also write your own adder and try it out! Feel free to use the `inpl_adder_test` function to verify your adder works.\n",
+    "In general you can also write your own adder and try it out! Feel free to use the [inpl_adder_test](../../reference/generated/qrisp.inpl_adder_test.rst) function to verify your adder works.\n",
     "\n",
     "To illustrate the difference, we benchmark the `gidney_adder` vs. the `qcla` on the operation that is most relevant for Shor's algorithm: Controlled modular in-place multiplication."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "d1c2d3ec",
    "metadata": {},
    "outputs": [
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "382af0ab",
    "metadata": {},
    "outputs": [
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "4a3ce745",
    "metadata": {},
    "outputs": [
@@ -515,7 +515,7 @@
        "'\\n          ┌─────────┐\\n    qb_0: ┤ P(π/16) ├\\n          └┬────────┤\\n    qb_1: ─┤ P(π/8) ├\\n           ├────────┤\\n    qb_2: ─┤ P(π/4) ├\\n           ├────────┤\\n    qb_3: ─┤ P(π/2) ├\\n           └────────┘\\n'"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "9dd48ffa",
    "metadata": {},
    "outputs": [
@@ -592,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "8ff9e4e2",
    "metadata": {},
    "outputs": [
@@ -600,7 +600,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{0: 0.0625, 1: 0.0625, 2: 0.0625, 3: 0.0625, 4: 0.0625, 5: 0.0625, 6: 0.0625, 7: 0.0625, 8: 0.0625, 9: 0.0625, 10: 0.0625, 11: 0.0625, 12: 0.0625, 13: 0.0625, 14: 0.0625, 15: 0.0625}\n"
+      "{4: 1.0}                                                                             \u001b[2K\n"
      ]
     }
    ],
@@ -620,7 +620,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "qrisp",
    "language": "python",
    "name": "python3"
   },
@@ -634,7 +634,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
