Review Jasp tutorial

--- a/documentation/source/general/tutorial/Jasp.ipynb
+++ b/documentation/source/general/tutorial/Jasp.ipynb
@@ -125,7 +125,7 @@
     "\n",
     "### What is Jasp?\n",
     "\n",
-    "Jasp is a module that provides Jax primitives for Qrisp syntax and therefore makes Qrisp Jax-traceable. How does this work in practice? The central class here is the Jaspr, which is a subtype of the Jaxpr. Similarly to Jaxprs, Jasprs can be created using the ``make_jaspr`` function."
+    "Jasp is a module that provides Jax primitives for Qrisp syntax and therefore makes Qrisp Jax-traceable. How does this work in practice? The central class here is the [Jaspr](../../reference/Jasp/Jaspr.rst), which is a subtype of the Jaxpr. Similarly to Jaxprs, Jasprs can be created using the ``make_jaspr`` function."
    ]
   },
   {
@@ -423,7 +423,7 @@
    "id": "0eac3d41",
    "metadata": {},
    "source": [
-    "We see 2 seconds now because the ``inner_function`` has been traced twice: Once for the QuantumFloat and once for the QuantumBool.\n",
+    "We see 2 seconds now because the ``inner_function`` has been traced twice: Once for the [QuantumFloat](../../reference/Quantum%20Types/QuantumFloat.rst) and once for the [QuantumBool](../../reference/Quantum%20Types/QuantumBool.rst).\n",
     "\n",
     "Another important concept are dynamic values. Dynamic values are values that are only known at runtime (i.e. when the program is actually executed). This could be because the value is coming from a quantum measurement. Every QuantumVariable and its ``.size`` attribute are dynamic. Furthermore classical values can also be dynamic. For classical values, we can use the Python native ``isinstance`` check for the ``jax.core.Tracer`` class, whether a variable is dynamic. Note that even though ``QuantumVariables`` behave dynamic, they are not tracers themselves."
    ]
@@ -487,7 +487,7 @@
    "id": "03bb1311",
    "metadata": {},
    "source": [
-    "What is the advantage of dynamic values? Dynamical code is **scale invariant**! For this we can use the jrange iterator, which allows you to execute a dynamic amount of loop iterations. Some restrictions apply however (check the docs to see which)."
+    "What is the advantage of dynamic values? Dynamical code is **scale invariant**! For this we can use the [jrange](../../reference/Jasp/Control%20Flow/jrange.rst) iterator, which allows you to execute a dynamic amount of loop iterations. Some restrictions apply however (check the docs to see which)."
    ]
   },
   {
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "fc71751c",
    "metadata": {},
    "outputs": [
@@ -693,7 +693,7 @@
     "    return measure(qf)\n",
     "\n",
     "print(main())\n",
-    "# Yieds:\n",
+    "# Yields:\n",
     "# 31.0 (the decimal equivalent of 11111)"
    ]
   },
@@ -704,7 +704,7 @@
    "source": [
     "## Terminal sampling\n",
     "\n",
-    "The jaspify decorator executes one \"shot\". For many quantum algorithms we however need the distribution of shots. In principle we could execute a bunch of \"jaspified\" function calls, which is however not as scalable. For this situation we have the terminal_sampling decorator. To use this decorator we need a function that returns a ``QuantumVariable`` (instead of a classical measurement result). The decorator will then perform a (hybrid) simulation of the given script and subsequently sample from the distribution at the end."
+    "The [jaspify](../../reference/Jasp/Simulation%20Tools/Jaspify.rst) decorator executes one \"shot\". For many quantum algorithms we however need the distribution of shots. In principle we could execute a bunch of \"jaspified\" function calls, which is however not as scalable. For this situation we have the [terminal_sampling](../../reference/Jasp/Simulation%20Tools/Terminal%20Sampling.rst) decorator. To use this decorator we need a function that returns a ``QuantumVariable`` (instead of a classical measurement result). The decorator will then perform a (hybrid) simulation of the given script and subsequently sample from the distribution at the end."
    ]
   },
   {
@@ -863,7 +863,7 @@
    "id": "add42830",
    "metadata": {},
    "source": [
-    "Note the injection operator, which allows us to transform the out-of-place multiplication function into an in-place version (required for uncomputation of the temporary result.\n",
+    "Note the [injection](../../reference/Core/Function%20Injection.rst) operator, which allows us to transform the out-of-place multiplication function into an in-place version (required for uncomputation of the temporary result).\n",
     "\n",
     "The first call needs some time for compilation"
    ]
@@ -1088,7 +1088,7 @@
    "id": "5981a84d",
    "metadata": {},
    "source": [
-    "This marks the end of this tutorial. Congratulations for making it until here! While the programming model of Jasp might differ in some ways from what you are used to with regular Qrisp, we believe that some of presented features will be of vital importance for making large scale quantum computing a reality from software side. If you haven't already done so, check out the documentation for more structured information to get your first Jasp algorithm up and running!"
+    "This marks the end of this tutorial. Congratulations for making it until here! While the programming model of Jasp might differ in some ways from what you are used to with regular Qrisp, we believe that some of presented features will be of vital importance for making large scale quantum computing a reality from software side. If you haven't already done so, check out the [documentation](../../reference/Jasp/index.rst) for more structured information to get your first Jasp algorithm up and running!"
    ]
   }
  ],
