Review Jasp QAOA tutorial

--- a/documentation/source/general/tutorial/JaspQAOAtutorial.ipynb
+++ b/documentation/source/general/tutorial/JaspQAOAtutorial.ipynb
@@ -16,7 +16,7 @@
     "\n",
     "![MaxCut Example](../../_static/maxcut_tutorial.png)\n",
     "\n",
-    "For a graph $G$ with $n$ nodes, such a bipartition can be encoded with a [QuantumVariable](/reference/QuantumVariable) with $n$ qubits: \n",
+    "For a graph $G$ with $n$ nodes, such a bipartition can be encoded with a [QuantumVariable](../../reference/Core/QuantumVariable.rst) with $n$ qubits: \n",
     "we measure the $i$-th qubit in 0 if the node $i$ is in the set $S$, and 1 if the node $i$ is in the set $V\\setminus S$.\n",
     "The cut value is the number of edges $e=(i,j)$ in $G$ such that $i\\in S$ and $j\\in V\\setminus S$.\n",
     "\n",
@@ -192,7 +192,7 @@
    "source": [
     "## Setting up the QAOA\n",
     "\n",
-    "For additional details, we refer to the [MaxCutQAOA](/reference/MaxCutQAOA) tutorial.\n",
+    "For additional details, we refer to the QAOA tutorial.\n",
     "\n",
     "**Step 6: Define the QAOA ansatz**\n",
     "\n",
@@ -293,7 +293,7 @@
    "source": [
     "**Step 8: Use a JAX-traceable Optimization Routine**\n",
     "\n",
-    "We define the qaoa function for finding the optimal parameter values using the JAX-traceable [minimize](/reference/optimization_tools) routine.\n",
+    "We define the `qaoa` function for finding the optimal parameter values using the JAX-traceable [minimize](../../reference/Jasp/Optimization%20Tools/Optimization%20Tools.rst) routine.\n",
     "It returns an array of optimal parameters and the average cost value for the optimal solution."
    ]
   },
@@ -371,7 +371,7 @@
    "id": "bf10302a",
    "metadata": {},
    "source": [
-    "You can also create the [jaspr](/reference/jaspr) object and compile to [QIR](https://www.qir-alliance.org) using [Catalyst](https://docs.pennylane.ai/projects/catalyst/en/stable/index.html)."
+    "You can also create the [jaspr](../../reference/Jasp/Jaspr.rst) object and compile to [QIR](https://www.qir-alliance.org) using [Catalyst](https://docs.pennylane.ai/projects/catalyst/en/stable/index.html)."
    ]
   },
   {
