Review HHL tutorial; Added QIR compilation with Catalyst

--- a/documentation/source/general/tutorial/HHL.ipynb
+++ b/documentation/source/general/tutorial/HHL.ipynb
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "id": "23a7d966",
    "metadata": {},
    "outputs": [],
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "id": "684a6c4f",
    "metadata": {},
    "outputs": [
@@ -170,12 +170,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "id": "338702b1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import qrisp\n",
     "@RUS(static_argnums = [0,1])\n",
     "def HHL_encoding(b, hamiltonian_evolution, n, precision):\n",
     "\n",
@@ -189,7 +188,7 @@
     "\n",
     "    case_indicator = QuantumFloat(inv_res.size)\n",
     "\n",
-    "    with conjugate(qrisp.h)(case_indicator):\n",
+    "    with conjugate(h)(case_indicator):\n",
     "        qbl = (case_indicator >= inv_res)\n",
     "    \n",
     "    cancellation_bool = (measure(case_indicator) == 0) & (measure(qbl) == 0)\n",
@@ -220,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "id": "0e2ccb91",
    "metadata": {},
    "outputs": [],
@@ -247,15 +246,15 @@
    "source": [
     "## Applying HHL to solve systems of linear equations\n",
     "\n",
-    "Let's try a first simple example. First, the matrix $A$ is repesented as a Pauli operator $H$ and the Hamiltonian evolution unitary $U=e^{itH}$ is obtained by trotterization with 1 step \n",
+    "Let's try a first simple example. First, the matrix $A$ is repesented as a Pauli operator $H$ and the Hamiltonian evolution unitary $U=e^{itH}$ is obtained by [trotterization](../../reference/Operators/generated/qrisp.operators.qubit.QubitOperator.trotterization.rst) with 1 step \n",
     "(as the Pauli terms commute in this case). We choose $t=\\pi$ to ensure that $\\widetilde{\\lambda}_i=\\lambda_i t/2\\pi$ are of the form $2^{-k}$ for a positive integer $k$.\n",
     "\n",
-    "This is enabled by the Qrisp's QubitOperator class providing the tools to describe, optimize and efficiently simulate quantum Hamiltonians."
+    "This is enabled by the Qrisp's [QubitOperator](../../reference/Operators/QubitOperator.rst) class providing the tools to describe, optimize and efficiently simulate quantum Hamiltonians."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "id": "ceafaee3",
    "metadata": {},
    "outputs": [],
@@ -280,13 +279,13 @@
    "id": "da1a6f84",
    "metadata": {},
    "source": [
-    "The `terminal_sampling` decorator performs a hybrid simulation and afterwards samples from the resulting quantum state. We convert the resulting measurement probabilities \n",
+    "The [terminal_sampling](../../reference/Jasp/Simulation%20Tools/Terminal%20Sampling.rst) decorator performs a hybrid simulation and afterwards samples from the resulting quantum state. We convert the resulting measurement probabilities \n",
     "to amplitudes by appling the square root. Note that, minus signs of amplitudes cannot be recovered from measurement probabilities."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "id": "e4303530",
    "metadata": {},
    "outputs": [
@@ -294,7 +293,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{0.0: 0.7071067811865476, 1.0: 0.7071067811865476}                                   \u001b[2K\u001b[2K\u001b[2K\u001b[2K\n"
+      "{0.0: 0.7071067811865476, 1.0: 0.7071067811865476}                                   \u001b[2K\n"
      ]
     }
    ],
@@ -323,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "id": "f60f6c40",
    "metadata": {},
    "outputs": [
@@ -352,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "id": "f922ac48",
    "metadata": {},
    "outputs": [
@@ -361,26 +360,26 @@
      "output_type": "stream",
      "text": [
       "Hermitian matrix A:\n",
-      "[[ 0.22862321 -0.00607924 -0.02401742 -0.03123366  0.02414751 -0.04354368\n",
-      "   0.00448535  0.00627139]\n",
-      " [-0.00607924  0.31141057  0.0684337   0.05156554 -0.10634693 -0.0228224\n",
-      "  -0.04326679 -0.04537255]\n",
-      " [-0.02401742  0.0684337   0.29388277  0.0213422   0.05310371 -0.11756531\n",
-      "   0.01624848 -0.04019696]\n",
-      " [-0.03123366  0.05156554  0.0213422   0.26782477 -0.09188877 -0.0463328\n",
-      "  -0.04618022 -0.02479065]\n",
-      " [ 0.02414751 -0.10634693  0.05310371 -0.09188877  0.30076226 -0.05857047\n",
-      "   0.04608575 -0.02995796]\n",
-      " [-0.04354368 -0.0228224  -0.11756531 -0.0463328  -0.05857047  0.28977557\n",
-      "  -0.04433725  0.06229082]\n",
-      " [ 0.00448535 -0.04326679  0.01624848 -0.04618022  0.04608575 -0.04433725\n",
-      "   0.27784621 -0.01150056]\n",
-      " [ 0.00627139 -0.04537255 -0.04019696 -0.02479065 -0.02995796  0.06229082\n",
-      "  -0.01150056  0.27987463]]\n",
+      "[[ 0.27161849  0.04084016 -0.02994612 -0.01343795  0.00456208 -0.02389833\n",
+      "  -0.03865614 -0.01028375]\n",
+      " [ 0.04084016  0.35006745 -0.06348883  0.04375543  0.00892184 -0.05256036\n",
+      "  -0.05969854 -0.03136835]\n",
+      " [-0.02994612 -0.06348883  0.39879834  0.02868921 -0.05439778  0.0555282\n",
+      "  -0.05704449  0.00337529]\n",
+      " [-0.01343795  0.04375543  0.02868921  0.47607339 -0.01603151 -0.00157681\n",
+      "   0.03290459 -0.0338936 ]\n",
+      " [ 0.00456208  0.00892184 -0.05439778 -0.01603151  0.27284976 -0.01434681\n",
+      "   0.04061657  0.00427224]\n",
+      " [-0.02389833 -0.05256036  0.0555282  -0.00157681 -0.01434681  0.2826893\n",
+      "   0.01797763  0.01245469]\n",
+      " [-0.03865614 -0.05969854 -0.05704449  0.03290459  0.04061657  0.01797763\n",
+      "   0.43479804  0.02610161]\n",
+      " [-0.01028375 -0.03136835  0.00337529 -0.0338936   0.00427224  0.01245469\n",
+      "   0.02610161  0.26310524]]\n",
       "Eigenvalues:\n",
-      "[0.125 0.25  0.5   0.5   0.125 0.25  0.25  0.25 ]\n",
+      "[0.25 0.25 0.5  0.5  0.5  0.25 0.25 0.25]\n",
       "b:\n",
-      "[1 1 1 1 0 0 0 1]\n"
+      "[0 0 0 1 0 0 1 1]\n"
      ]
     }
    ],
@@ -420,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "id": "2c548c3e",
    "metadata": {},
    "outputs": [
@@ -434,11 +433,11 @@
     {
      "data": {
       "text/plain": [
-       "array([0.49846514, 0.30193447, 0.34968244, 0.47622512, 0.22800623,\n",
-       "       0.29567265, 0.1231846 , 0.3958741 ])"
+       "array([0.09903807, 0.08063741, 0.03992062, 0.43921894, 0.04622294,\n",
+       "       0.04614081, 0.40873337, 0.78603666])"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "id": "1d6c3f7c",
    "metadata": {},
    "outputs": [
@@ -476,8 +475,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.49912593 0.30065328 0.3489454  0.47620804 0.22836473 0.29629679\n",
-      " 0.12329741 0.39597909]\n"
+      "[ 0.09933223  0.0753401   0.03977885  0.43778338 -0.04595318 -0.04595032\n",
+      "  0.40797335  0.7877531 ]\n"
      ]
     }
    ],
@@ -514,11 +513,181 @@
    "source": [
     "As qrispy as always!"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d778a6fc",
+   "metadata": {},
+   "source": [
+    "## QJIT compilation with Catalyst\n",
+    "\n",
+    "The solution that we saw so far only ran within the Python-based Qrisp\n",
+    "internal simulator, which doesn't have to care about silly things such\n",
+    "as coherence time. Unfortunately, this is not (yet) the case for real\n",
+    "quantum hardware so it is of paramount importance that the classical\n",
+    "real-time computations (such as the while loop within the\n",
+    "repeat-until-success steps) are executed as fast as possible. For this\n",
+    "reason the QIR specification was created.\n",
+    "\n",
+    "QIR essentially embeds quantum aspects into\n",
+    "[LLVM](https://llvm.org/docs/), which is the foundation of a lot of\n",
+    "modern compiler infrastructure. This implies QIR based software stacks\n",
+    "are able to integrate a large part of established classical software and\n",
+    "also express real-time control structures. Read more about QIR at the\n",
+    "[QIR Alliance website](https://www.qir-alliance.org/) and the [Advancing\n",
+    "hybrid quantum--classical computation with real-time execution\n",
+    "paper](https://www.frontiersin.org/journals/physics/articles/10.3389/fphy.2022.940293/full).\n",
+    "\n",
+    "Jasp has been built with a direct Catalyst integration implying Jasp\n",
+    "programs can be converted to QIR via the Catalyst pipeline. This\n",
+    "conversion is straightforward: You simply capture the Qrisp computation\n",
+    "using the `make_jaspr` function and then call `to_qir`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "4bf49e00",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "; ModuleID = 'LLVMDialectModule'                                                     \u001b[2K\n",
+      "source_filename = \"LLVMDialectModule\"\n",
+      "target datalayout = \"e-m:o-i64:64-i128:128-n32:64-S128-Fn32\"\n",
+      "target triple = \"arm64-apple-darwin24.5.0\"\n",
+      "\n",
+      "@\"{'shots': 0, 'mcmc': False, 'num_burnin': 0, 'kernel_name': None}\" = internal constant [66 x i8] c\"{'shots': 0, 'mcmc': False, 'num_burnin': 0, 'kernel_name': None}\\00\"\n",
+      "@LightningSimulator = internal constant [19 x i8] c\"LightningSimulator\\00\"\n",
+      "@\"/opt/anaconda3/envs/qrisp/lib/python3.10/site-packages/pennylane_lightning/liblightning_qubit_catalyst.dylib\" = internal constant [109 x i8] c\"/opt/anaconda3/envs/qrisp/lib/python3.10/site-packages/pennylane_lightning/liblightning_qubit_catalyst.dylib\\00\"\n",
+      "@__constant_xi64_3 = private constant i64 1\n",
+      "@__constant_xi1 = private constant i1 false\n",
+      "@__constant_xi64_2 = private constant i64 0\n",
+      "@__constant_1024xi64 = private constant [1024 x i64] zeroinitializer\n",
+      "@__constant_xi64_1 = private constant i64 30\n",
+      "@__constant_xi64_0 = private constant i64 4\n",
+      "@__constant_xi64 = private constant i64 3\n",
+      "@__constant_30xi64 = private constant [30 x i64] [i64 30, i64 29, i64 28, i64 27, i64 26, i64 25, i64 24, i64 23, i64 22, i64 21, i64 20, i64 19, i64 18, i64 17, i64 16, i64 15, i64 14, i64 13, i64 12, i64 11, i64 10, i64 9, i64 8, i64 7, i64 6, i64 5, i64 4, i64 3, i64 2, i64 1]\n",
+      "@__constant_xf64_34 = private constant double 0xBF8D02B4A78574FA\n",
+      "@__constant_xf64_33 = private constant double 0xBFCBA5614317CB35\n",
+      "@__constant_xf64_32 = private constant double 0x3F998A8430AEF7BA\n",
+      "@__constant_xf64_31 = private constant double 0x3F9FCFE0804A8850\n",
+      "@__constant_xf64_30 = private constant double 0x3F807D3742E47A2C\n",
+      "@__constant_xf64_29 = private constant double 0xBF6B69C1DC783640\n",
+      "@__constant_xf64_28 = private constant double 0xBF40F04DDF80EBDC\n",
+      "@__constant_xf64_27 = private constant double 0xBF840EC9BEB08EA8\n",
+      "@__constant_xf64_26 = private constant double 0xBF80EBD1A8EC99B0\n",
+      "@__constant_xf64_25 = private constant double 0xBF8296060CFC377A\n",
+      "@__constant_xf64_24 = private constant double 0x3F7234DFA\n"
+     ]
+    }
+   ],
+   "source": [
+    "def main():\n",
+    "    x = HHL(tuple(b), U, n, 4)\n",
+    "    # Note that we have to return a classical value\n",
+    "    # (in this case the measurement result of the\n",
+    "    # quantum variable returned by the HHL algorithm)\n",
+    "    # Within the above examples, we used the terminal_sampling\n",
+    "    # decorator, which is a convenience feature and allows\n",
+    "    # a much faster sampling procedure.\n",
+    "    # The terminal_sampling decorator expects a function returning\n",
+    "    # quantum variables, while most other evaluation modes require\n",
+    "    # classical return values.\n",
+    "    return measure(x)\n",
+    "\n",
+    "\n",
+    "jaspr = make_jaspr(main)()\n",
+    "qir_str = jaspr.to_qir()\n",
+    "# Print only the first few lines - the whole string is very long.\n",
+    "print(qir_str[:2000])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ba037ef8",
+   "metadata": {},
+   "source": [
+    "## The Catalyst runtime\n",
+    "\n",
+    "Jasp is also capable of targeting the Catalyst execution runtime\n",
+    "(i.e., the Lightning simulator). There are, however, still some\n",
+    "simulator features to be implemented on Jasp side, which prevents\n",
+    "efficient sampling. We restrict the demonstration to the smaller\n",
+    "examples from above to limit the overall execution time required.\n",
+    "(Warning: The execution may take more than 15 minutes.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "286b2c59",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.0, 0.0, 1.0, 0.0, 0.0]                                                            \u001b[2K\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = np.array([[3 / 8, 1 / 8], [1 / 8, 3 / 8]])\n",
+    "\n",
+    "b = np.array([1, 1])\n",
+    "\n",
+    "H = QubitOperator.from_matrix(A).to_pauli()\n",
+    "\n",
+    "\n",
+    "# By default e^{-itH} is performed. Therefore, we set t=-pi.\n",
+    "def U(qf):\n",
+    "    H.trotterization()(qf, t=-np.pi, steps=1)\n",
+    "\n",
+    "\n",
+    "@qjit\n",
+    "def main():\n",
+    "    x = HHL(tuple(b), U, 1, 3)\n",
+    "\n",
+    "    return measure(x)\n",
+    "\n",
+    "\n",
+    "samples = []\n",
+    "for i in range(5):\n",
+    "    samples.append(float(main()))\n",
+    "\n",
+    "print(samples)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "330e2404",
+   "metadata": {},
+   "source": [
+    "Scrolling back to the `terminal_sampling`\n",
+    "cell, we see that the expected distribution is 50/50 between one and\n",
+    "zero, which roughly agrees to the result of the previous cell and\n",
+    "concludes this demo.\n",
+    "\n",
+    "## Conclusion\n",
+    "\n",
+    "In this demo, we have shown how to implement the HHL algorithm featuring\n",
+    "classical real-time computations in the high-level language Qrisp. This\n",
+    "algorithm is important in a variety of use cases such as solving\n",
+    "differential equations, accelerating machine learning, and more\n",
+    "generally, any task that involves solving linear systems of equations.\n",
+    "Along the way, we have dipped into advanced concepts such as Linear\n",
+    "Combination of Unitaries and Hamiltonian simulation. Moreover, we have\n",
+    "demonstrated how Qrisp and Catalyst complement each other for\n",
+    "translating a high-level implementation into low-level QIR."
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "qrisp",
    "language": "python",
    "name": "python3"
   },
@@ -532,7 +701,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
